# xcurl

./: Cargo.toml  README.md
examples/: char_index.rs  conf.rs  qs.rs
fixtures/: test.yaml
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  validate.rs  workspace.rs  yaml.rs
src/output/: colorful_tty.rs  mod.rs  tools.rs
src/utils/: mod.rs
