[package]
name = "xcurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
atty = "0.2.14"
clap = { version = "4.0.32", features = ["derive"] }
dialoguer = "0.10.2"
http-serde = "1.1.2"
lazy_static = "1.4.0"
mime = "0.3.16"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_qs = "0.10.1"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.16"
syntect = "5.0.0"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
